# wasix-sendmail

./: Cargo.toml  Readme.md  wasmer.toml
.github/workflows/: build-webc.yml  pr-checks.yml  release.yml
src/: args.rs  lib.rs  logger.rs  main.rs  parser.rs
src/backend/: api.rs  file.rs  mod.rs  smtp.rs
src/parser/: email_parser.rs
tests/: api_integration.rs  sendmail_integration.rs
