[package]
name = "wasix-sendmail"
version = "0.1.2"
edition = "2021"
license = "AGPL-3.0"
authors = [
    "Zebreus <zebreus@zebreu.us>",
    "Arshia Ghafoori <arshia001@live.com>",
]
repository = "https://github.com/wasix-org/wasix-sendmail"
keywords = ["wasix", "sendmail", "email", "smtp", "wasmer"]
categories = ["email", "command-line-utilities"]
description = "A POSIX-compliant sendmail implementation for WASIX"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "sendmail"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
# panic = "abort" # 5% size reduction, but probably not worth it

[dependencies]
chumsky = { version = "0.12.0", default-features = false }
clap = { version = "4.5", features = ["derive"] }
email_address = "0.2"
env_logger = "0.11"
lettre = { version = "0.11.7", default-features = false, features = [
    "builder",
    "rustls-tls",
    "smtp-transport",
] }
log = "0.4"
thiserror = "1.0.62"
anyhow = "1.0.86"
uuid = { version = "1.0", features = [
    "v4",
    "getrandom",
], default-features = false }

# Pin wasix-specific crate versions so patches work
socket2 = "=0.5.5"
libc = "=0.2.169"

[patch.crates-io]
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.5.5" }
libc = { git = "https://github.com/wasix-org/libc.git", branch = "wasix-0.2.169" }
