[package]
name = "wasix-sendmail"
version = "0.1.4"
edition = "2024"
license = "AGPL-3.0"
authors = [
    "Zebreus <zebreus@zebreu.us>",
    "Arshia Ghafoori <arshia001@live.com>",
]
repository = "https://github.com/wasix-org/wasix-sendmail"
keywords = ["wasix", "sendmail", "email", "smtp", "wasmer"]
categories = ["email", "command-line-utilities"]
description = "A POSIX-compliant sendmail implementation for WASIX"

[lib]
crate-type = ["rlib"]

[[bin]]
name = "sendmail"
path = "src/main.rs"

[profile.release]
lto = true
opt-level = "z"
strip = true
codegen-units = 1
# panic = "abort" # 5% size reduction, but probably not worth it

[dependencies]
clap = { version = "4.5", features = ["derive", "env"] }
env_logger = "0.11"
lettre = { version = "0.11.17", default-features = false, features = [
    "builder",
    "rustls-tls",
    "smtp-transport",
] }
log = "0.4"
rootcause = "0.11.1"
uuid = { version = "1.0", features = [
    "v4",
    "getrandom",
], default-features = false }
ureq = { version = "2.10", default-features = false, features = ["tls"] }
url = "2.5"

# Pin wasix-specific crate versions so patches work
socket2 = "=0.5.5"
libc = "=0.2.169"

[dev-dependencies]
tiny_http = "0.12"

[patch.crates-io]
socket2 = { git = "https://github.com/wasix-org/socket2.git", branch = "v0.5.5" }
libc = { git = "https://github.com/wasix-org/libc.git", branch = "wasix-0.2.169" }
